client/src/App.css
@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Warnes&display=swap");

#root {
  min-height: 100vh;
  width: 100%;
  font-family: "Roboto Mono", monospace;
  max-width: 2000px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
  background-color: black;
  color: white;
}

header {
  /* min-height: 200px;
  min-height: 200px; */
  text-align: center;
  display: inline;
}

.karaoke {
  font-family: "Warnes", cursive;
  font-size: 50px;
  color: #fff;
  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #b401fb, 0 0 20px #b401fb,
    0 0 25px #b401fb, 0 0 30px #b401fb, 0 0 35px #b401fb;
  animation: glow 3s linear infinite;
  
}
@keyframes glow {
  from {
    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #b401fb, 0 0 20px #b401fb,
      0 0 25px #b401fb, 0 0 30px #b401fb, 0 0 35px #b401fb;
  }
  to {
    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #b401fb,
      0 0 40px #b401fb, 0 0 50px #b401fb, 0 0 60px #b401fb, 0 0 70px #b401fb;
  }
}
h2 {
  font-family: "Warnes", cursive;
}

a {
  color: hotpink;
}
a:hover {
  color: rgba(255, 255, 255, 1);
  box-shadow: 0 5px 15px rgba(19, 252, 19, 0.4);
}

.ui.card > .content,
.ui.card > .header,
.ui.card > .meta,
.ui.cards > .card > .content {
  color: rgb(255, 255, 255) !important;
  background-color: #000000;
}

.ui.card > .content.extra,
.ui.cards > .card > .content.extra {
  background-color: #000000;
  color: white;
}

.ui.input > input {
  min-width: 300px;
  font-size: 4rem;
  color: greenyellow;
  background-image: linear-gradient(
    to left,
    rgb(0, 0, 0),
    rgb(174, 0, 255)
  ) !important;
}
main {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.centerBody {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

div#root {
  padding-left: 100px;
}



.formContainer {
  /* display: flex; */
  justify-content: center;
  padding: 100px;
}

.login-form,
.sign-up-form {
  display: flex;
  justify-content: center;
  align-items: center;
  background-image: url("./seoul.svg");
  min-width: 400px;
  min-height: 400px;
  background-position: center;
  color: white;
  

  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #b401fb, 0 0 20px #b401fb,
    0 0 25px #b401fb, 0 0 30px #b401fb, 0 0 35px #b401fb;
  font-size: 5rem;
}
.login-form::before {
  opacity: 0.75;
}
Button {
  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #b401fb, 0 0 20px #b401fb,
    0 0 25px #b401fb, 0 0 30px #b401fb, 0 0 35px #b401fb;
}

.card {
  color: white;
}

.header {
  color: white;
}

.cardholder {
  display: flex;
  justify-content: center;
}

.ui.form.field {
  min-width: 300px;
  font-size: 4rem;
  color: greenyellow;
  background-image: linear-gradient(
    to left,
    rgb(0, 0, 0),
    rgb(174, 0, 255)
  ) !important;
}

